--- a/pipelines/coconut-blackbox-tests.yml
+++ b/pipelines/coconut-blackbox-tests.yml
@@ -256,22 +256,21 @@ jobs:
   - aggregate:
     - get: loggregator-tools
     - get: loggregator-ci
-  - aggregate:
-    - task: deploy
-      file: loggregator-ci/tasks/datadog-accumulator/task.yml
-      params:
-        APP_NAME: "datadog-accumulator"
-        SYSTEM_DOMAIN: "coconut.cf-app.com"
-        DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-        DATADOG_TAGS: accumulator-coconut
-        LOG_CACHE_HTTP_ADDR: http://log-cache.coconut.cf-app.com
-        LOG_CACHE_GROUP_NAME: coconut-datadog-accumulator
-        ORG: system
-        SPACE: accumulators
-        USERNAME: {{coconut-username}}
-        PASSWORD: {{coconut-password}}
-        UAA_CLIENT: {{coconut-uaa-client}}
-        UAA_CLIENT_SECRET: {{coconut-uaa-client-secret}}
+  - task: deploy-datadog-accumulator
+    file: loggregator-ci/tasks/datadog-accumulator/task.yml
+    params:
+      APP_NAME: "datadog-accumulator"
+      SYSTEM_DOMAIN: "coconut.cf-app.com"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DATADOG_TAGS: accumulator-coconut
+      ORG: system
+      SPACE: accumulators
+      USERNAME: {{coconut-username}}
+      PASSWORD: {{coconut-password}}
+      LOG_CACHE_HTTP_ADDR: http://log-cache.coconut.cf-app.com
+      LOG_CACHE_GROUP_NAME: coconut-datadog-accumulator
+      UAA_CLIENT: {{coconut-uaa-client}}
+      UAA_CLIENT_SECRET: {{coconut-uaa-client-secret}}
 
 - name: log-cache
   public: false
