Add new job name to main group
[#156209990]

Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -2,7 +2,7 @@ groups:
 - name: main
   jobs:
   - cf-deploy
-  - datadog-accumulator
+  - deploy-datadog-accumulator
   - log-cache-blackbox
   - cf-destroy
 - name: director-lifecycle
