--- a/pipelines/coconut-blackbox-tests.yml
+++ b/pipelines/coconut-blackbox-tests.yml
@@ -283,18 +283,16 @@ jobs:
       trigger: true
   - aggregate:
     - task: push-datadog-accumulator
-      file: loggregator-ci/tasks/datadog-accumulator/task.yml
+      file: loggregator-ci/tasks/log-cache-datadog-accumulator/task.yml
       params:
         APP_NAME: "log-cache-data-dog-accumulator"
         SYSTEM_DOMAIN: "coconut.cf-app.com"
         DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+        LOG_CACHE_ADDR: http://log-cache.coconut.cf-app.com
         ORG: system
         SPACE: blackbox-testing
         USERNAME: {{coconut-username}}
         PASSWORD: {{coconut-password}}
-        LOG_CACHE_HTTP_ADDR: http://log-cache.coconut.cf-app.com
-        LOG_CACHE_GROUP_NAME: "log-cache-datadog-accumulator"
-        LOG_CACHE_SOURCE_ID_WHITELIST: log-cache
         UAA_CLIENT: {{coconut-uaa-client}}
         UAA_CLIENT_SECRET: {{coconut-uaa-client-secret}}
     - task: push-request-spinner
