--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -363,3 +363,18 @@ jobs:
       PASSWORD: {{playground-password}}
       UAA_CLIENT: {{playground-uaa-client}}
       UAA_CLIENT_SECRET: {{playground-uaa-client-secret}}
+  - task: push-datadog-accumulator
+    file: loggregator-ci/tasks/log-cache-datadog-accumulator/task.yml
+    params:
+      APP_DOMAIN: "log-cache-blackbox.playground.loggr.cf-app.com"
+      APP_NAME: "log-cache-data-dog-accumulator"
+      SYSTEM_DOMAIN: "playground.loggr.cf-app.com"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      LOG_CACHE_ADDR: http://log-cache.playground.loggr.cf-app.com
+      ORG: system
+      SPACE: blackbox-testing
+      SKIP_SSL_VALIDATION: true
+      USERNAME: {{playground-username}}
+      PASSWORD: {{playground-password}}
+      UAA_CLIENT: {{playground-uaa-client}}
+      UAA_CLIENT_SECRET: {{playground-uaa-client-secret}}
