--- a/pipelines/pws-us-blackbox-tests.yml
+++ b/pipelines/pws-us-blackbox-tests.yml
@@ -350,18 +350,16 @@ jobs:
       trigger: true
   - aggregate:
     - task: push-datadog-accumulator
-      file: loggregator-ci/tasks/datadog-accumulator/task.yml
+      file: loggregator-ci/tasks/log-cache-datadog-accumulator/task.yml
       params:
         APP_NAME: "log-cache-data-dog-accumulator"
         SYSTEM_DOMAIN: "run.pivotal.io"
         DATADOG_API_KEY: {{datadog-prod-api-key}}
+        LOG_CACHE_ADDR: http://log-cache.run.pivotal.io
         ORG: cf-lamb
         SPACE: development
         USERNAME: {{pws-username}}
         PASSWORD: {{pws-password}}
-        LOG_CACHE_HTTP_ADDR: http://log-cache.run.pivotal.io
-        LOG_CACHE_GROUP_NAME: "log-cache-datadog-accumulator"
-        LOG_CACHE_SOURCE_ID_WHITELIST: log-cache
         UAA_CLIENT: {{pws-uaa-client}}
         UAA_CLIENT_SECRET: {{pws-uaa-client-secret}}
       timeout: 5m
