make statsd injector release use the final release task
[#156482813]

Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -259,7 +259,7 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry/statsd-injector-release
-    branch: master
+    branch: develop
     private_key: {{cf-loggregator-oauth-bot-key}}
     ignore_paths:
     - .final_builds
