--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1723,6 +1723,7 @@ jobs:
 
 - name: service-metrics-deploy
   serial: true
+  serial_groups: ["cf-deploy"]
   plan:
   - aggregate:
     - get: service-metrics-release
