Add params to skip building test and non-test packages
[#153835773]

Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/pipelines/logging-acceptance-tests.yml
+++ b/pipelines/logging-acceptance-tests.yml
@@ -25,3 +25,4 @@ jobs:
       package-src: logging-acceptance-tests
     params:
       SOURCE_IMPORT_PATH: code.cloudfoundry.org/logging-acceptance-tests
+      BUILD_NON_TEST: false
