Remove .git from url because of code.cloudfoundry.org doesn't redirect to it
[#153835773]

Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/pipelines/logging-acceptance-tests.yml
+++ b/pipelines/logging-acceptance-tests.yml
@@ -4,13 +4,13 @@ resources:
   type: git
   source:
     branch: master
-    uri: https://github.com/cloudfoundry/loggregator-ci.git
+    uri: https://github.com/cloudfoundry/loggregator-ci
 
 - name: logging-acceptance-tests
   type: git
   source:
     branch: master
-    uri: https://github.com/cloudfoundry/logging-acceptance-tests.git
+    uri: https://github.com/cloudfoundry/logging-acceptance-tests
 
 jobs:
 - name: compile-tests
