--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -153,6 +153,13 @@ resources:
     branch: master
     private_key: {{cf-loggregator-oauth-bot-key}}
 
+- name: loggregator-tools-master
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/loggregator-tools
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
+
 - name: cf-drain-cli-github-release-drafts
   type: github-release
   source:
@@ -747,12 +754,14 @@ jobs:
   - aggregate:
     - get: loggregator-ci
     - get: cf-drain-cli
+    - get: loggregator-tools-master
   - task: create-binaries
     file: loggregator-ci/tasks/release-cf-drain-cli/task.yml
     params:
       VERSION_MAJOR: 0
       VERSION_MINOR: 6
-
+    input_mapping:
+      loggregator-tools: loggregator-tools-master
   - put: cf-drain-cli
     params:
       repository: output-repo/cf-drain-cli
